--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     <li class="list"><a href="#home-page-look-like">Home Page look like</a></li>
                     <li class="list"><a href="#source-creadit">Source and creadit</a></li>
                     <li class="list"><a href="#source-creadit">Source and Code</a></li>
+                    <li class="list"><a href="#source-creadit">Source and SS</a></li>
                 </ul>
             </nav>
         </section>
